[tool.poetry]
name = "spikes-python3"
version = "0.0.1"
description = "Exploring various Python whims & quirks"
authors = ["Anthony <burning2007@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.4"
waitress = "^1.4.2"
sqlalchemy = "^1.3.13"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
